package common.roles;

public class Admin extends Role {
    public Admin(String name) {
        super(name);
    }
}
