package common.roles;

public class CUser extends Role {
    public CUser(String name) {
        super(name);
    }
}
