package common.roles;

public class PowerUser extends Role {
    public PowerUser(String name) {
        super(name);
    }
}
